# Adventure

./: .gitignore  CMakeLists.txt  README.md  genAreas.py
map/: CastleF1Bedroom1.area  CastleF1HallB.area  CastleF1HallT.area  CastleF1KeyRoom.area  CastleF1Miniboss.area  CastleF1StairUpRoom.area  CastleF1SwordRoom.area  CastleGFDiningL.area  CastleGFDiningR.area  CastleGFEntrance.area  CastleGFKeyRoom.area  CastleGFKitchen.area  CastleGFStairUpHall.area  CastleGFStorageRoom.area  CastleGFThrone.area  InsideHome.area  OutsideHome.area  T1Entrance.area  T1NpcRoom.area  T1SlimeRoom.area
nds/: Makefile
src/: area.cpp  area.hpp  areaSaveData.hpp  areasHelper.hpp  arrow.cpp  arrow.hpp  bomb.cpp  bomb.hpp  boomerang.cpp  boomerang.hpp  chest.cpp  chest.hpp  dialog.cpp  dialog.hpp  entity.cpp  entity.hpp  global.hpp  hitswitch.hpp  lock.hpp  main.cpp  mainNDS.cpp  mainSDL.cpp  npc.hpp  player.cpp  player.hpp  slime.cpp  slime.hpp
